See CHANGELOG.md

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Zikrullah",
-  "name": "Recite the Names of Allah - Esmaul Husna!",
+  "name": "Zikrullah - Veličanje Allaha Uzvišenog izgovarajući Njegova Imena - Esmaul Husna",
   "icons": [
     {
       "src": "favicon.ico",
